src/test/fixtures/syntax-error/error-3/Main.hp
import Syntax;
//Caso teste- Erro de sintaxe 3:
// Nesse caso observa-se que o IR gerado possui a permissao
// para ler(Reads) ou arquivo CCN mesmo estando declarado DENY
// tanto na variavel 'alice', quanto na chamada do main.
// Conclusão:
// Aparentemente a linguagem irá determinar que, sempre após um EXCEPT,
// será considerado o exato Oposto da Sentença anterior (ALLOW/DENY), ou seja:

// DENY
// EXCEPT -> Tudo abaixo desse EXCEPT será ALLOWed, ate achar outro EXCEPT

// ALLOW
// EXCEPT -> Tudo abaixo desse EXCEPT será DENY(i)ed, ate achar outro EXCEPT

main =  
  DENY
  EXCEPT {
    ALLOW {
      Actors: Analyst
      Resources
      Actions
    }
    DENY Syntax::alice
  };